--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon crs"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
